--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "tailwindcss": "3.4.17",
+    "ts-node": "^10.9.2",
     "typescript": "^5.9.2",
     "vite": "^5.2.0"
   }
